messing more with problem 90